[kbss-cvut/s-pipes-editor-ui#222] Add support for # in ontology prefixes
Module names can now be prefixed by ${ontologyIRI}#